# gratte-papier

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  cabal.config  gratte-papier.cabal  gratte-papier.cabal.m4
front-end/: index.html
front-end/styles/: index.css
public/app/: index.html
public/app/scripts/: script.coffee
src/: Gratte.hs  Main.hs  Server.hs
src/Control/Monad/: Gratte.hs
src/Gratte/: Add.hs  AddDoc.hs  Document.hs  Logger.hs  Options.hs  Reindex.hs  Search.hs  SearchDocs.hs  SearchEngine.hs  Serve.hs  TH.hs  Tag.hs  TextExtractor.hs  TypeDefs.hs  Utils.hs
src/Gratte/Command/: Add.hs  Encryption.hs  Reindex.hs  Search.hs  Serve.hs
src/Gratte/Options/: Add.hs  Encryption.hs  Search.hs  Serve.hs
src/System/: GratteExternalCommands.hs
src/System/Log/: GratteLogger.hs
src/executable/: Main.hs  Migrate.hs  OldDocument.hs
tests/: TestHelper.hs
tests/integration/: Suite.hs
tests/unit/: Suite.hs
tests/unit/Gratte/: SearchEngineSpec.hs
tests/unit/Gratte/Command/: EncryptionSpec.hs
