name:                gratte-papier
version:             0.2.0.0
synopsis:            Command-line tool to facilitate document archive via OCR.
license:             MIT
license-file:        LICENSE
author:              Thomas Franquelin
build-type:          Simple
cabal-version:       >=1.10

executable gratte-papier
  ghc-options:       -Wall
  main-is:           Main.hs
  hs-source-dirs:    src
  build-depends:     base
                     , HTTP
                     , MissingH
                     , aeson
                     , attoparsec
                     , bytestring
                     , directory
                     , either
                     , filepath
                     , hslogger
                     , mtl
                     , network
                     , old-time
                     , process
                     , split
                     , template-haskell
                     , temporary
                     , text
                     , unix
                     , vector

test-suite integration
  type:              exitcode-stdio-1.0
  main-is:           Suite.hs
  hs-source-dirs:    tests/integration
                     , src
                     , tests/

  build-depends:     base
                     , HTTP
                     , MissingH
                     , aeson
                     , attoparsec
                     , bytestring
                     , directory
                     , either
                     , filepath
                     , hslogger
                     , mtl
                     , network
                     , old-time
                     , process
                     , split
                     , template-haskell
                     , temporary
                     , text
                     , unix
                     , vector
